--- a/13/13.html
+++ b/13/13.html
@@ -1,64 +1,85 @@
-<link rel="stylesheet" href="./css/13.css" />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/13.css" />
 
-<link rel="stylesheet" href="./Bootstrap v4/bootstrap-4.5.0-dist/css/bootstrap.min.css" />
-<script src="./Bootstrap v4/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="./Bootstrap-v4/bootstrap-4.5.0-dist/css/bootstrap.min.css" />
+        <script src="./Bootstrap-v4/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.min.css" />
+        <link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.min.css" />
 
-<div class="module13 mb-4">
-    <div class="banner-header"></div>
-    <div class="title-module">
-        <div class="container">
-            <h1 class="m-0 py-2">Monetary policy</h1>
-        </div>
-    </div>
-    <div class="link-page p-1">
-        <div class="container">
-            <span>
-                Home > Courses > Faculty of Medicine > Physiotherapy
-            </span>
-        </div>
-    </div>
-    <div class="container">
-        <div class="body-module">
-            <div class="row content-module py-3 my-5">
-                <div
-                    class="col-lg-2 col-md-12 mb-1 d-flex align-items-center justify-content-center"
-                >
-                    <span class="mr-2">Introdution</span>
-                    <button class="buttonsection btn btn-danger">•••</button>
-                </div>
-                <div
-                    class="col-lg-4 col-md-12 mb-1 d-flex align-items-center justify-content-center"
-                >
-                    <span>First Module</span>
-                    <button class="ml-2 buttonsection-number bg-dark px-3 py-2  text-white">1</button>
-                    <button class="ml-2 buttonsection-number bg-dark px-3 py-2  text-white">2</button>
-                    <button class="ml-2 buttonsection-number bg-dark px-3 py-2  text-white">3</button>
-                </div>
-                <div
-                    class="col-lg-4 col-md-12 mb-1 d-flex align-items-center justify-content-center"
-                >
-                    <span>Second Module</span>
-                    <button class="ml-2 buttonsection-number bg-dark px-3 py-2  text-white">1</button>
-                    <button class="ml-2 buttonsection-number bg-dark px-3 py-2  text-white">2</button>
-                </div>
-                <div
-                    class="col-lg-2 col-md-12 mb-1 d-flex align-items-center justify-content-center"
-                >
-                    <span class="mr-2">Extra Content</span>
-                    <button class="buttonsection bg-dark  text-white">•••</button>
+        <title>Module  13</title>
+    </head>
+    <body>
+        <div class="module13 mb-4">
+            <div class="banner-header"></div>
+            <div class="title-module">
+                <div class="container">
+                    <h1 class="m-0 py-2">Monetary policy</h1>
                 </div>
             </div>
+            <div class="link-page p-1">
+                <div class="container">
+                    <span>
+                        Home > Courses > Faculty of Medicine > Physiotherapy
+                    </span>
+                </div>
+            </div>
+            <div class="container">
+                <div class="body-module">
+                    <div class="row content-module py-3 my-5">
+                        <div
+                            class="col-lg-2 col-md-12 mb-1 d-flex align-items-center justify-content-center"
+                        >
+                            <span class="mr-2">Introdution</span>
+                            <button class="buttonsection btn btn-danger">•••</button>
+                        </div>
+                        <div
+                            class="col-lg-4 col-md-12 mb-1 d-flex align-items-center justify-content-center"
+                        >
+                            <span>First Module</span>
+                            <button class="ml-2 buttonsection-number bg-dark px-3 py-2 text-white">
+                                1
+                            </button>
+                            <button class="ml-2 buttonsection-number bg-dark px-3 py-2 text-white">
+                                2
+                            </button>
+                            <button class="ml-2 buttonsection-number bg-dark px-3 py-2 text-white">
+                                3
+                            </button>
+                        </div>
+                        <div
+                            class="col-lg-4 col-md-12 mb-1 d-flex align-items-center justify-content-center"
+                        >
+                            <span>Second Module</span>
+                            <button class="ml-2 buttonsection-number bg-dark px-3 py-2 text-white">
+                                1
+                            </button>
+                            <button class="ml-2 buttonsection-number bg-dark px-3 py-2 text-white">
+                                2
+                            </button>
+                        </div>
+                        <div
+                            class="col-lg-2 col-md-12 mb-1 d-flex align-items-center justify-content-center"
+                        >
+                            <span class="mr-2">Extra Content</span>
+                            <button class="buttonsection bg-dark text-white">•••</button>
+                        </div>
+                    </div>
+                </div>
+                <p class="opaci-text">
+                    Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
+                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris
+                    blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa,
+                    convallis a pellentesque nec, egestas non nisi. Nulla quis lorem ut libero
+                    malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis quis ac
+                    lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Cras
+                    ultricies ligula sed magna dictum porta. Quisque velit nisi, pretium ut lacinia
+                    in, elementum id enim.
+                </p>
+            </div>
         </div>
-        <p class="opaci-text">
-            Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
-            Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit
-            aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a
-            pellentesque nec, egestas non nisi. Nulla quis lorem ut libero malesuada feugiat.
-            Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat,
-            accumsan id imperdiet et, porttitor at sem. Cras ultricies ligula sed magna dictum
-            porta. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-        </p>
-    </div>
-</div>
+    </body>
+</html>
