--- a/21/21.html
+++ b/21/21.html
@@ -1,103 +1,127 @@
-<link rel="stylesheet" href="./css/21.css" />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/21.css" />
 
-<link rel="stylesheet" href="./Bootstrap v4/bootstrap-4.5.0-dist/css/bootstrap.min.css" />
-<script src="./Bootstrap v4/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="./Bootstrap-v4/bootstrap-4.5.0-dist/css/bootstrap.min.css" />
+        <script src="./Bootstrap-v4/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.min.css" />
-
-<div class="module21">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
-                <h4>Box icon type 1</h4>
-                <p class="content-icon">
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien
-                    massa, convallis a pellentesque nec, egestas non nisi. Proin eget tortor risus.
-                    Donec rutrum congue leo eget malesuada. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor at sem. Curabitur aliquet quam id dui posuere blandit.
-                    Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
-                </p>
+        <link rel="stylesheet" href="./fontawesome-free-5.13.0-web/css/all.min.css" />
+        <title>Module 21</title>
+    </head>
+    <body>
+        <div class="module21">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-fill-drip icon-control position-absolute"></i>
-                        </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
+                    <div class="col-md-8">
+                        <h4>Box icon type 1</h4>
+                        <p class="content-icon">
+                            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+                            Proin eget tortor risus. Donec rutrum congue leo eget malesuada.
+                            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+                            Curabitur aliquet quam id dui posuere blandit. Praesent sapien massa,
+                            convallis a pellentesque nec, egestas non nisi.
                         </p>
-                    </div>
+                        <div class="row">
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i class="fas fa-fill-drip icon-control position-absolute"></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
 
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-calendar-plus icon-control position-absolute"></i>
-                        </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
-                        </p>
-                    </div>
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i
+                                        class="fas fa-calendar-plus icon-control position-absolute"
+                                    ></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
 
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-tools icon-control position-absolute"></i>
-                        </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
-                        </p>
-                    </div>
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i class="fas fa-tools icon-control position-absolute"></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
 
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-signal icon-control position-absolute"></i>
-                        </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
-                        </p>
-                    </div>
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i class="fas fa-signal icon-control position-absolute"></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
 
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-gift icon-control position-absolute"></i>
-                        </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
-                        </p>
-                    </div>
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i class="fas fa-gift icon-control position-absolute"></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
 
-                    <div class="col-md-4 text-center box-icon-detail">
-                        <div class="icon-content position-relative">
-                            <i class="fas fa-flask icon-control position-absolute"></i>
+                            <div class="col-md-4 text-center box-icon-detail">
+                                <div class="icon-content position-relative">
+                                    <i class="fas fa-flask icon-control position-absolute"></i>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="text-decoration-none title-icon"
+                                        >Donec velit neque</a
+                                    >
+                                </div>
+                                <p class="text-center content-icon">
+                                    Donec rutrum congue leo eget malesuada. Donec rutrum congue leo
+                                    eget malesuada.
+                                </p>
+                            </div>
                         </div>
-                        <div class="mb-2">
-                            <a href="" class="text-decoration-none title-icon">Donec velit neque</a>
-                        </div>
-                        <p class="text-center content-icon">
-                            Donec rutrum congue leo eget malesuada. Donec rutrum congue leo eget
-                            malesuada.
-                        </p>
                     </div>
+                    <div class="col-md-4"></div>
                 </div>
             </div>
-            <div class="col-md-4"></div>
         </div>
-    </div>
-</div>
+    </body>
+</html>
